[package]
name = "webp_killer"
version = "1.2.1"
authors = ["Vhou-Atroph"]
description = "A command line tool to simplify removing .webp files from your life."
license = "GNU General Public License v3.0"
edition = "2021"
exclude = [
    "auto-demo.gif",
    "*.webp"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
crossbeam-channel = "0.5.4"
notify ="5.0.0-pre.15"